--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -37,3 +37,27 @@
     
 
 }
+
+.button {
+    background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 7px 90px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 20px;
+  margin-top: 10px;
+}
+
+.form-flex {
+    display: flex;
+    flex-direction: column;
+}
+
+.forgot {
+    padding-top: 10px;
+    text-align: left;
+}
+
