--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -21,6 +21,8 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
+    align-items: center;
+    
 }
 
 .single {
@@ -33,7 +35,7 @@
     justify-content: center;
     align-items: start;
     width: 50%;
-    margin-left: 400px;
+    
     
 
 }
@@ -60,4 +62,6 @@
     padding-top: 10px;
     text-align: left;
 }
+
+
 
