--- a/src/pages/content.css
+++ b/src/pages/content.css
@@ -1,6 +1,71 @@
 .cont {
-    background-color: red;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: calc(100% - 200px);
+  display: flex;
+  align-items: center;
+
+  @media (max-width: 768px) {
+    width: 100%;
+  }
+}
+
+.content-heading {
+  font-size: 24px;
+  margin: 20px 0;
+}
+
+/* Card.css */
+
+.card {
+  width: 250px;
+  height: 250px;
+  flex-shrink: 0;
+  margin: 20px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  background-color: #fff;
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card-content {
+  padding: 20px;
+  background-color: #fff;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-content h2 {
+  font-size: 20px;
+  margin: 0;
+}
+
+.card-content p {
+  font-size: 14px;
+  margin: 10px 0;
+}
+
+.card-content button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.card-content button:hover {
+  background-color: #0056b3;
 }
