--- a/src/pages/dashboard.css
+++ b/src/pages/dashboard.css
@@ -1,13 +1,15 @@
 .dash {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  justify-content: space-between;
 }
 
 .outlet {
-    height: 500px;
-    width: 1000px;
-    margin-right: 50px;
-   
-    align-self: center;
+  display: flex;
+  flex: 1;
+  height: 500px;
+  width: 1000px;
+  margin-top: 100px;
+  max-width: 1000px;
 }
